welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:5: error: reassignment to val
     	 	     	i=i+1
                         ^